test/cgip/PP/error/instvars/instvars-13.err105
"Command line error 
221: Instance invariant was broken"
